@@ -4,6 +4,7 @@ Dec 14, 2007 - Jim Clark
 - Completed fermentation schedual functionality (save and xml->html export)
 - Revamped xlst to include all data on sheet. Much nicer output now, usable for a brewday sheet.
 - Fixed note display and UI panel
+- Moved some string lists into their prespective 'home' classes (mash types in Mash for example)
 
 Dec 13, 2007 - Jim Clark
 - Added fermentation schedual tab and infrastructure. Commented out of StrangeSwing 
